# manjaro-web-repo

./: .gitignore  .htaccess  AUTHORS  CMakeLists.txt  README.md  mirrors.json  mirrors.json.outdated
data/: CMakeLists.txt  footer.html  header.html  main.js  style.css
data/css/: style.css  style.min.css
data/js/: main.js  main.min.js
data/style/: style.css
src/: CMakeLists.txt  backgroundworker.cpp  backgroundworker.h  builder.py  conf.py  const.h  global.cpp  global.h  helpers.py  logger.py  main.cpp  main.py  mainwidget.cpp  mainwidget.h  manjaro-web-repo.pro  manjaro-web-repo.pro.user.0000000  mirror.py  repositorystatepage.cpp  repositorystatepage.h
